# Saftrade

./: .env.example  .gitignore  LICENSE  README.md  debug_bsjp.py  main.py  pyproject.toml  run.bat
config/: settings.py  watchlist.py
core/: ai_engine.py  data_provider.py  goapi_client.py  notifier.py  strategy.py  yfinance_client.py
database/: db_manager.py
